versioned_docs/version-12.0.0/modules/visualisation/getting-started/index.mdx
---
sidebar_position: 1
---

import {
  ChromeIcon,
  ExcelIcon,
  FirefoxIcon,
  MacOsIcon,
  PythonIcon,
  SafariIcon,
  WindowsIcon,
} from '@site/src/components/Icons';
import {VisCommandBlock} from '@site/src/components/VisCommandBlock';
import {VisCommandInline} from '@site/src/components/VisCommandInline';
import {VizCommandInline} from '@site/src/components/VizCommandInline';
import {Fragment} from 'react';
import ReactPlayer from 'react-player';

# 🏃 Getting started

## 🔗 Compatibility

<Fragment>
  While the web app is compatible with most browsers, we've encountered
  intermittent issues with <FirefoxIcon /> Firefox on <WindowsIcon /> Windows 11
  and <SafariIcon /> Safari on <MacOsIcon /> macOS 14. For optimal performance,
  we recommend using <ChromeIcon /> Chrome.
</Fragment>

<h2>
  🔧 <VisCommandInline /> Command
</h2>

<Fragment>
  :::warning
  Ensure you have an active <PythonIcon /> Python `venv` in a terminal window.
  :::

</Fragment>

:::info
[Learn how to activate 🔮 virtual
environments](../../../installation/application#-virtual-environment)
:::

This command swiftly initiates both the `Audio` and `Front` services.

<Fragment>
  In an active `venv` terminal, enter the following command to start both
  services (replace the path to your configuration file by dragging and dropping
  the <ExcelIcon /> configuration file icon into your terminal):
</Fragment>

<VisCommandBlock />

After pressing `<Enter>`, both services will launch, and your default browser
will open.

<Fragment>
  :::note
  You can alternatively use <VizCommandInline /> as an alias
  for the <VisCommandInline /> command.
  :::

</Fragment>

<details>
  <summary>
    <WindowsIcon /> Windows screencast
  </summary>
  <ReactPlayer
    controls
    loop
    url="/screencasts/visualisation_windows.mp4"
  />
</details>

## 🔧 `audio:front` Command

Simultaneously start both the `Front` and `Audio` services.

```bash
# Windows
pnpm audio:front:windows Z:\audio_folder_example

# Ubuntu / macOS
pnpm audio:front relative/or/absolute/path/to/audio/folder
```

## 🔧 `audio` Command

Start the `Audio` service on port [5531](http://localhost:5531).

```bash
pnpm audio -- relative/or/absolute/path/to/audio/folder
```

## 🔧 `front` Command

Start the `Front` service on port [5530](http://localhost:5530).

```bash
pnpm front
```
